--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,7 +9,8 @@
   font-size: larger;
 }
 .navbar { 
-  background-color: #bebec2 !important;
+  /* background-color: #bebec2 !important; */
+  background-color: #ebecee;
   box-shadow: -1px 9px 61px -8px rgba(0,0,0,0.45);
 -webkit-box-shadow: -1px 9px 61px -8px rgba(0,0,0,0.45);
 -moz-box-shadow: -1px 9px 61px -8px rgba(0,0,0,0.45);
