--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,3 +15,6 @@
 -webkit-box-shadow: -1px 9px 61px -8px rgba(0,0,0,0.45);
 -moz-box-shadow: -1px 9px 61px -8px rgba(0,0,0,0.45);
 }
+.btn:hover { 
+  background-color: mediumseagreen;
+}
