--- a/frontend/src/components/Details/Details.css
+++ b/frontend/src/components/Details/Details.css
@@ -1,12 +1,11 @@
 body{
     background-color: #efeff5;
-    width:100%;
-    height: 100%;
   }
   
   .outer{
-    margin:0 auto;
-    position:relative;
+    margin: auto;
+    padding : 5px;
+    /* position:relative; */
     top:40px;
     
     background:#ebecee;
@@ -16,11 +15,12 @@ body{
   
 .card {
     border-radius:0px;
-    /* -webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.25);
-    box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.25); */
+    box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.25);
     border: none;
     background-color: inherit;
+    padding-bottom: 10px;
     
 }
 
@@ -43,4 +43,16 @@ body{
 }
 .a{
     margin: none;
+}
+
+.cross { 
+    top: 0%;
+    float: right;
+}
+
+.btn:hover { 
+    background-color: mediumseagreen;
+}
+.text-body { 
+    font-weight: bold;
 }
