--- a/frontend/src/components/Form/Form.css
+++ b/frontend/src/components/Form/Form.css
@@ -39,3 +39,7 @@ box-shadow:4px 4px 6px rgba(196, 195, 195, 0.8), -4px -4px 6px rgba(255, 255, 25
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.custom-button-my-own{
+    width: 50%;
+    border-radius: 50px;
+}
